--- a/web/ajax/pageAppel.html
+++ b/web/ajax/pageAppel.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-            <form action=" servlet " methode=" get ">
+            <form action="  " methode=" get ">
                 
                 <span> choisir formation </span>
                 <input type="text" placeholder="co ">
