--- a/web/ajax/faireappel.html
+++ b/web/ajax/faireappel.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>PageAppel</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="ajax/csspageAppel.css" type="text/css" />
+        <link rel="stylesheet" href="csspageAppel.css" type="text/css" />
     </head>
     
     <body>
