--- a/web/ajax/faireappel.html
+++ b/web/ajax/faireappel.html
@@ -41,7 +41,7 @@ and open the template in the editor.
                 
                 <div class="info_choisir">
                 <span>Choisir groupeTD : </span><br/>
-                    <select name="groupe" id="">                       
+                    <select name="groupe" id="groupe">                       
                         <option value="id_groupe_1">TD1 M1 IM</option>
                         <option value="id_groupe_2"> TD1 M1 IM </option>
                         <option value="id_groupe_3">TD FI M2 IPM</option>
@@ -185,6 +185,6 @@ and open the template in the editor.
         <input type="reset" value="initialiser" class="bouton"/> 
         <input type="submit" value="valider"  class="bouton btn_valider" />
       </div>
-
+     <script type="text/JavaScript" src="faireappel.js"></script>
     </body>
 </html>
