--- a/web/ajax/enseigant.html
+++ b/web/ajax/enseigant.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>etudiant</div>
+        <div>Enseigant</div>
+        <p></p>
     </body>
 </html>
