--- a/web/ajax/faireappel.html
+++ b/web/ajax/faireappel.html
@@ -19,7 +19,7 @@ and open the template in the editor.
             <form method ="" action="" name="" >
                 <div class="info_choisir">
                     <span class=""> choisir formation </span><br/>
-                    <select name="cours" id="formation">
+                    <select name="formation" id="formation">
                         <option value="MIAGEIPM"> IPM</option>
                         <option value="MIAGEISIAD"> ISIAD </option>
                         <p id="s"></p>
@@ -30,10 +30,10 @@ and open the template in the editor.
                 <div class="info_choisir">
                  <span> Choisir cours: </span><br/>
                     <select name="cours" id="cours">
-                        <option value="">groupe FA</option>
+<!--                        <option value="">groupe FA</option>
                         <option value=""> groupe FI </option>
                         <option value="id_groupe3"> groupe anglais</option>
-                        <option value="id_groupe4"> groupe melange </option>
+                        <option value="id_groupe4"> groupe melange </option>-->
                     </select>
                  </div>
                 
@@ -41,10 +41,10 @@ and open the template in the editor.
                 <div class="info_choisir">
                 <span>Choisir groupeTD : </span><br/>
                     <select name="groupe" id="groupe">                       
-                        <option value="id_groupe_1">TD1 M1 IM</option>
+<!--                        <option value="id_groupe_1">TD1 M1 IM</option>
                         <option value="id_groupe_2"> TD1 M1 IM </option>
                         <option value="id_groupe_3">TD FI M2 IPM</option>
-                        <option value="id_groupe_4">TD FA M2 IPM</option>
+                        <option value="id_groupe_4">TD FA M2 IPM</option>-->
                     </select>
                 </div>
                 <br/>
