--- a/web/ajax/etudiant.html
+++ b/web/ajax/etudiant.html
@@ -21,8 +21,8 @@
             <Table class="infos_etudiant_tab" border="1">
                 <tr>
                     <th>Bienvenu</th>
-                    <th>prenom</th>
-                    <th>Nom</th>
+                    <th id="prenom">prenom</th>
+                    <th id="nom">Nom</th>
                     <th><img alt="" src="" >(photo)</th>
                 </tr>
             </table>       
