--- a/web/ajax/faireappel.html
+++ b/web/ajax/faireappel.html
@@ -41,6 +41,7 @@ and open the template in the editor.
                     </select>
                  </div><br/>
              
+                <br/>
                 <div class="info_choisir">
                     <p>Date: <input type="text" id="datepicker" ></p>
                 </div>
@@ -59,7 +60,15 @@ and open the template in the editor.
                         <option>IPM1920FI</option>
                         <option>IPM1920FA</option>
                     </select>
-                </div><br/> 
+                </div>
+                
+                <span> Choisir Type :</span>
+                 <select name="typeCours" id="typeCours">                       
+                        <option>Exam</option>
+                        <option>Cours</option>
+                        <option>TD</option>
+                    </select>
+                <br/>
             </form>
       </div>           
 <!--  liste étudiant -->  <hr/>
