--- a/web/ajax/faireappel.html
+++ b/web/ajax/faireappel.html
@@ -59,8 +59,14 @@ and open the template in the editor.
                         <option>IPM1920FI</option>
                         <option>IPM1920FA</option>
                     </select>
-                </div><br/> 
-            </form>
+                </div>
+                <span> Choisir Type :</span>
+                 <select name="typeCours" id="typeCours">                       
+                        <option>Exam</option>
+                        <option>Cours</option>
+                        <option>TD</option>
+                    </select>
+                <br/> 
       </div>           
 <!--  liste étudiant -->  <hr/>
     <div class="list_etudiant"> 
