--- a/web/ajax/faireappel.html
+++ b/web/ajax/faireappel.html
@@ -11,7 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="ajax/csspageAppel.css" type="text/css" />
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="/resources/demos/style.css">
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script>
@@ -22,7 +21,7 @@ and open the template in the editor.
     </head>
     
     <body>
-        <div><h2>Bonjour</h2> </div>
+        <div><h2>Bonjour</h2></div>
         <div>
             
                 <div class="info_choisir">
@@ -63,14 +62,14 @@ and open the template in the editor.
                 </div>
 
                 <span> Choisir Type :</span>
-                 <select name="typeCours" id="typeCours">                       
+                 <select name="typeCours" id="typeCours">
+                        <option>TypeCours</option>
                         <option>Exam</option>
                         <option>Cours</option>
                         <option>TD</option>
                     </select>
 
                 <br/>
-            </form>
 
 
       </div>           
@@ -82,13 +81,22 @@ and open the template in the editor.
             <th>Nom</th>
             <th>Pr&eacutenom</th>
             <th>Etat Preacutesent</th>
-        </table>  
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                <tr>
+        </table>
+
 
     </div>  
 
       <div class = "div_bouton">        
         <input type="submit" value="valider"  class="bouton btn_valider" id="btn_valider"/>
       </div>
+        <img src="../photo/21511001.jpg" alt="photo"/>
+        <img src="../photo/vallesnathalie@gmail.com.jpg.jpg" alt="photo"/>
      <script type="text/JavaScript" src="ajax/faireappel.js"></script>
     </body>
 </html>
