--- a/web/ajax/GestionCours.html
+++ b/web/ajax/GestionCours.html
@@ -24,7 +24,7 @@ and open the template in the editor.
             <ul>
                 <li><a href="GestionEnseignant">GestionEnseignant</a></li>
                 <li><a href="GestionEtudiant">GestionEtudiant</a></li>
-                <li><a href="">GestionCours</a></li>
+                <li><a href="" class="active">GestionCours</a></li>
                 <li><a href="GestionPeriode">GestionP&eacuteriode</a></li>
                 <li><a href="login">D&eacuteconnecter</a></li>
             </ul>
