--- a/web/ajax/GestionPeriode.html
+++ b/web/ajax/GestionPeriode.html
@@ -25,7 +25,7 @@ and open the template in the editor.
                 <li><a href="GestionEnseignant">GestionEnseignant</a></li>
                 <li><a href="GestionEtudiant">GestionEtudiant</a></li>
                 <li><a href="GestionCours">GestionCours</a></li>
-                <li><a href="">GestionP&eacuteriode</a></li>
+                <li><a href="" class="active">GestionP&eacuteriode</a></li>
                 <li><a href="login">D&eacuteconnecter</a></li>
             </ul>
         <div>
