--- a/web/ajax/GestionCours.html
+++ b/web/ajax/GestionCours.html
@@ -28,9 +28,22 @@ and open the template in the editor.
                 <li><a href="GestionPeriode">GestionP&eacuteriode</a></li>
                 <li><a href="login">D&eacuteconnecter</a></li>
             </ul>
-        <div>
-            <span> Nom:  </span><input type="text" id="nomPersonne" style="width:60px" onkeyup="this.value=this.value.replace(/[^a-zA-Z]/g,'')">
-            <span> Prenom: </span><input type="text" id="prenomPersonne" style="width:60px" onkeyup="this.value=this.value.replace(/[^a-zA-Z]/g,'')"><br/>
+            <div class="info_choisir">
+                    <span class=""> Choisir formation </span><br/>
+                    <select name="formation" id="formation">
+                        <option value="Formation">Formation</option>
+                        <option value="MIAGEIPM"> IPM</option>
+                        <option value="MIAGEISIAD"> ISIAD </option>
+                    </select>
+                </div>
+               
+                <div class="info_choisir">
+                 <span> Choisir cours: </span><br/>
+                    <select name="cours" id="cours">
+
+                    </select>
+                 </div><br/>
+            <span> Libelle Matiere </span><input type="text" id="nom" style="width:150px" onkeyup="this.value=this.value.replace(/[^a-zA-Z, ]+/g,'')"><br/>
             <span id ="verifPersonneRes"></span><br/>
             <div>
                 <input type="button" id ="btn_consulter" value="Consulter" disabled="disabled" />
@@ -41,10 +54,10 @@ and open the template in the editor.
             <div id="infoAfficher" style="display:none">
                 <form onsubmit="return false">
                     <table border="2">
-                        <tr><th colspan="2">Etudiant</th></tr>
-                            <tr><td>Nom</td><td><input type="text" value="" id="nom" disabled='' style="width:60px"></td></tr>
+                        <tr><th colspan="2">Matiere</th></tr>
+                            <tr><td>LibelleMatier</td><td><input type="text" value="" id="nom" disabled='' style="width:60px"></td></tr>
                 
-                            <tr><td>Prenom</td><td><input type="text" value="" id="prenom" disabled='' style="width:60px"></td></tr>
+                            <tr><td>Formation</td><td><input type="text" value="" id="prenom" disabled='' style="width:60px"></td></tr>
 
                             <tr><td>Numero etudiant</td><td><input type="number" value="" id="numE" min="10000000" max="99999999" title="8 chiffres"></td></tr>
 
