--- a/web/ajax/faireappel.html
+++ b/web/ajax/faireappel.html
@@ -26,16 +26,13 @@ and open the template in the editor.
     <body>
        <header> <!-- title logo-->
            <div class="entete">                                   
-                    <div class="logo">
-                        <img src="images/logoUti.png" alt="logo" class="logoImg">
-                    </div>
+                    
 
                     <div class="info_personne">
                         <table class="info_personne_tab" border="1">
                             <tr>
                                 <th>Bienvenu</th>                                                                   
-                                <th>prenomP</th>                                
-                                <th>NomP</th>                                                                  
+                                                                                                 
                             </tr>
                         </table>
                     </div>            
@@ -128,6 +125,7 @@ and open the template in the editor.
 
         <div class = "div_bouton">        
           <input type="submit" value="valider"  class="bouton btn_valider" id="btn_valider"/>
+          <button class="btn_v" ><a href="getionE" class="active">retour</a></button>
         </div>
        <script type="text/JavaScript" src="ajax/faireappel.js"></script>
     </body>
